[package]
name = "bke_ccl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytemuck = "1.23.2"
glam = "0.30.5"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.0"
env_logger = "0.11.8"
crossbeam = "0.8.4"
flume = "0.11.1"
winit = { version = "0.30", features = ["android-native-activity"] }
wesl = "0.2.0"
criterion = { version = "0.8.1", features = ["async_futures"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
wesl = "0.2.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "test_image"
harness = false
